--- a/index.html
+++ b/index.html
@@ -33,6 +33,30 @@
         <a href="https://google.com">GOOGLE</a>
         <a href="/">secondary link</a>
 
+        <hr>
+       <h2>@list</h2>
+
+       <h3>unordered list</h3>
+
+       <ul>
+        <li>item one</li>
+        <li>item two</li>
+        <li>item three</li>
+       </ul>
+
+       <h3>reverse order</h3>
+       <ol>
+        <li>milk</li>
+        <li>eggs</li>
+        <li>break</li>
+
+       </ol>
+       <hr>
+       <h2>@nav</h2>
+
+       <nav>
+        <div>iAm</div>
+       </nav>
 
 
 
