--- a/index.html
+++ b/index.html
@@ -55,8 +55,27 @@
        <h2>@nav</h2>
 
        <nav>
-        <div>iAm</div>
+        <div>iAmBrand</div>
+        <ul>
+            <li>
+                <a href="/">home</a>
+            </li>
+            <li>
+                <a href="/">products</a>
+            </li>
+            <li>
+                <a href="/">about</a>
+            </li>
+
+
+
+        </ul>
        </nav>
+       <hr>
+       <h2>Header</h2>
+       <header>
+        <img src="images/react.svg" alt="">
+       </header>
 
 
 
