--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Component Library</title>
+    
+    <link href="styles.css" rel="stylesheet"/>
+
+
 </head>
 <body>
     <h1>welcome to Nishant componenets library</h1>
