--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
         <small>This is relatively small text</small>
 
         <h2>@container</h2>
-        <h3></h3>
+        <h3>fluid container</h3>
+        <div class="container-fluid">This is a fluid container and it will go till the end of page</div>
 
         <div>This is a fluid container and it will go till the end of the page </div>
+        <h3>center contaner</h3>
+        <div class="container">This is a centered container and it will go till the specified width</div>
 
+        <hr>
+        
         <h2>@links</h2>
 
         <a href="https://google.com">GOOGLE</a>
