--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         <div class="container-fluid">This is a fluid container and it will go till the end of page</div>
 
         <div>This is a fluid container and it will go till the end of the page </div>
-        <h3>center contaner</h3>
+        <h3>center container</h3>
         <div class="container">This is a centered container and it will go till the specified width</div>
 
         <hr>
-        
+
         <h2>@links</h2>
 
         <a href="https://google.com">GOOGLE</a>
@@ -85,8 +85,6 @@
        <header>
         <img src="images/react.svg" alt="">
        </header>
-<<<<<<< HEAD
-
        <hr>
 
 
@@ -109,8 +107,6 @@
        <div style="height: 30vh;">
     
         </div>
-=======
->>>>>>> 19baf67cde872009c85fa86c4c9daa3d1b4c0032
 
 
 
