--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
         <h2>@links</h2>
 
-        <a href="https://google.com">GOOGLE</a>
+        <a class="links"href="/">primary link</a>
+        
         <a href="/">secondary link</a>
 
         <hr>
