--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
         <h2>@links</h2>
 
-        <a class="links"href="/">primary link</a>
+        <a class="link link-primary"href="/">primary link</a>
         
-        <a href="/">secondary link</a>
+        <a class="link link-secondary" href="/">secondary link</a>
 
         <hr>
        <h2>@list</h2>
