--- a/index.html
+++ b/index.html
@@ -47,11 +47,21 @@
        <h2>@list</h2>
 
        <h3>unordered list</h3>
+       <p>this list will not have bullet</p>
 
-       <ul>
+       <ul style="list-style:none">
         <li>item one</li>
         <li>item two</li>
         <li>item three</li>
+       </ul>
+
+
+       <h3>unorgered inline list</h3>
+
+       <ul >
+        <li >Inline Item One</li>
+        <li >Inline Item Two</li>
+        <li >Inline Item three</li>
        </ul>
 
        <h3>reverse order</h3>
