--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
        <h3>unordered list</h3>
        <p>this list will not have bullet</p>
 
-       <ul style="list-style:none">
+       <ul class="list-non-bullet">
         <li>item one</li>
         <li>item two</li>
         <li>item three</li>
@@ -58,10 +58,10 @@
 
        <h3>unorgered inline list</h3>
 
-       <ul >
-        <li >Inline Item One</li>
-        <li >Inline Item Two</li>
-        <li >Inline Item three</li>
+       <ul class="list-non-bullet">
+        <li class="list-item-inline">Inline Item One</li>
+        <li class="list-item-inline" >Inline Item Two</li>
+        <li class="list-item-inline" >Inline Item three</li>
        </ul>
 
        <h3>reverse order</h3>
