--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
        <ul class="list-non-bullet">
         <li class="list-item-inline">Inline Item One</li>
         <li class="list-item-inline" >Inline Item Two</li>
-        <li class="list-item-inline" >Inline Item three</li>
+        <li  >Inline Item three</li>
        </ul>
 
        <h3>reverse order</h3>
@@ -74,17 +74,17 @@
        <hr>
        <h2>@nav</h2>
 
-       <nav>
-        <div>iAmBrand</div>
-        <ul>
-            <li>
-                <a href="/">home</a>
+       <nav class="navigation container" >
+        <div class="nav-brand">iAmBrand</div>
+        <ul class="nav-pills">
+            <li class="list-item-inline">
+                <a class="link" href="/">home</a>
             </li>
-            <li>
-                <a href="/">products</a>
+            <li class="list-item-inline" >
+                <a class="link" href="/">products</a>
             </li>
-            <li>
-                <a href="/">about</a>
+            <li class="list-item-inline" >
+                <a class="link" href="/">about</a>
             </li>
 
 
