--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
 
         </section>
         <hr>
-        <h2>@fooeter</h2>
+        <h2>@footer</h2>
                
-         <footer>
-            <div>Some small heading inside footer</div>
-             <ul>
-                <li>socialone</li>
-                <li>socialTwo</li>
-                <li>socialthree</li>
+         <footer class="footer">
+            <div class="footer-header">Some small heading inside footer</div>
+             <ul class="social-links liat-non-bullet">
+                <li class="list-item-inline"><a class="link"href="/"> socialone</a></li>
+                <li class="list-item-inline"><a class="link" href="/">socialtwo</a></li>
+                <li class="list-item-inline"><a class="link"href="/">socialthree</a></li>
 
              </ul>
          </footer>
